More editions to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#intro">Top<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">About me<span class="sr-only">About me</span></a></li>
-        <li><a href="#">Portfolio Websites<span class="sr-only">Portfolio</span></a></li>
+        <li><a href="#about">About me<span class="sr-only">About me</span></a></li>
+        <li><a href="#portfolio">Portfolio Websites<span class="sr-only">Portfolio</span></a></li>
         <li><a href="#">Contact<span class="sr-only">Contact</span></a></li>
       </ul>
     
@@ -82,6 +82,69 @@
 	</div>
 	
 </div>
+
+<div class="well">
+	<h1>My websites... feel free to explore each one..</h1>	
+</div>
+
+<div class="thumbnail" id="portfolio">
+<img src="images/tropical.jpg" alt="screenshot of tropicalmoonlight.us">
+<div class="caption">
+<div class="well text-center">
+<h3>www.TropicalMoonlight.us</h3></div>
+<p class="lead">Website offering Classroom experience in a Medical University in St Lucia.</p>
+<p>Coding Attributes: <br>
+	<ul>
+		<li>Written in PHP</li>
+		<li>Uses Boostrap framework with design layout</li>
+		<li>Responsive form, which also emails Admin on any submission</li>
+	</ul>
+</p>
+<p><a href="http://www.tropicalmoonlight.us" class="btn btn-primary" role="button" target="_blank">Visit Tropical Moonlight</a></p>
+</div>
+</div>
+
+<div class="thumbnail">
+<img src="images/greenstlucia.jpg" alt="screenshot of tropicalmoonlight.us">
+<div class="caption">
+<div class="well text-center">
+<h3>www.GreenStLucia.info</h3></div>
+<p class="lead">Website offering rental property in St. Lucia</p>
+<p>Coding Attributes: <br>
+	<ul>
+		<li>Written in the PHP Codeigniter framework.</li>
+		<li>Database driven booking and message system, with responsive UI Calender to reflect bookings.</li>
+		<li>Responsive online booking system, with auto calender updates to reflect user submissions.</li>
+		<li>Admin login and extra features, with easy UI to manage bookings and user messages.</li>
+		<li>Also Uses Bootstrap framework.</li>
+	</ul>
+</p>
+<p><a href="http://www.greenstlucia.info" class="btn btn-primary" role="button" target="_blank">Visit GreenStLucia</a></p>
+</div>
+</div>
+
+<div class="thumbnail">
+<img src="images/greenstlucia.jpg" alt="screenshot of greenstlucia.info">
+<div class="caption">
+<div class="well text-center">
+<h3>www.GreenStLucia.info</h3></div>
+<p class="lead">Website offering rental property in St. Lucia</p>
+<p>Coding Attributes: <br>
+	<ul>
+		<li>Written in the PHP Codeigniter framework.</li>
+		<li>Database driven booking and message system, with responsive UI Calender to reflect bookings.</li>
+		<li>Responsive online booking system, with auto calender updates to reflect user submissions.</li>
+		<li>Admin login and extra features, with easy UI to manage bookings and user messages.</li>
+		<li>Also Uses Bootstrap framework.</li>
+	</ul>
+</p>
+<p><a href="http://www.greenstlucia.info" class="btn btn-primary" role="button" target="_blank">Visit GreenStLucia</a></p>
+</div>
+</div>
+
+
+
+
 </div>
 </div>
 </div>
