Final editions for now. Will review later on for job submissions

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 
         <li><a href="#about">About me<span class="sr-only">About me</span></a></li>
         <li><a href="#portfolio">Portfolio Websites<span class="sr-only">Portfolio</span></a></li>
-        <li><a href="#">Contact<span class="sr-only">Contact</span></a></li>
+        <li><a href="#contact">Contact<span class="sr-only">Contact</span></a></li>
       </ul>
     
       
@@ -73,6 +73,7 @@
 					<li>PHP - and frameworks like Codeigniter</li>
 					<li>Javascript</li>
 					<li>Other frameworks like Node.js</li>
+					<li>FreeCodeCamp Newbie</li>
 				</ul>
 			</p>
 		</div>
@@ -90,7 +91,7 @@
 </div>
 
 <div class="thumbnail">
-<img src="images/tropical.jpg" alt="screenshot of tropicalmoonlight.us">
+<img src="http://tropicalmoonlight.us/FCC/images/tropical.jpg" alt="screenshot of tropicalmoonlight.us">
 <div class="caption">
 <div class="well text-center">
 <h3>www.TropicalMoonlight.us</h3></div>
@@ -107,7 +108,7 @@
 </div>
 
 <div class="thumbnail">
-<img src="images/greenstlucia.jpg" alt="screenshot of tropicalmoonlight.us">
+<img src="http://tropicalmoonlight.us/FCC/images/greenstlucia.jpg" alt="screenshot of greenstlucia.us">
 <div class="caption">
 <div class="well text-center">
 <h3>www.GreenStLucia.info</h3></div>
@@ -126,7 +127,7 @@
 </div>
 
 <div class="thumbnail">
-<img src="images/locumhire.jpg" alt="screenshot of locumhire.info">
+<img src="http://tropicalmoonlight.us/FCC/images/locumhire.jpg" alt="screenshot of locumhire.info">
 <div class="caption">
 <div class="well text-center">
 <h3>www.Locumhire.co.uk</h3></div>
@@ -154,7 +155,9 @@
 
 <div id="contact">
 <div class="well">
-<h2>Contact Me here</h2>
+<div class="row">
+<div class="col-md-7">
+<h2>Contact Me Here</h2>
 <h4>Actually, don't. This is a FCC project, and the form isnt hooked up.</h4>
 <form>
 <div class="form-group">
@@ -170,17 +173,24 @@
 <textarea name="comments" id="comments" class="form-control" placeholder="Your Comments here" required></textarea>
 </div>
 
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-send"></span> Contact Me!</button>
 </form>
 </div>
 </div>
-
-
-
+</div>
+</div>
 
 </div>
 </div>
 </div>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+   <p class="navbar-text navbar-right">FreeCodeCamp Portfolio Project By David Dorr</p>
+  </div>
+</nav>
+
+
 
 
 <!-- finish codepen -->
