Added font awesome CDN to enable use of github and FCC link buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/mystyle.css">
 
 
@@ -186,6 +187,10 @@
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
+  <p class="navbar-left" id="icons">
+  	<a href="https://github.com/dave-d-code"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+	<span id="next-icon"><a href="https://www.freecodecamp.com/dave-d-code"><i class="fa fa-fire fa-4x" aria-hidden="true"></i></a></span>
+  </p>
    <p class="navbar-text navbar-right">FreeCodeCamp Portfolio Project By David Dorr</p>
   </div>
 </nav>
